trunk/Archive2/48/7c7bc234bf2e41/output
main.cpp: In function 'int main()':
main.cpp:20:30: error: expected primary-expression before 'foo'
   if ( (std::shared_ptr<Foo> foo{std::dynamic_pointer_cast<Foo>(bar)}) ) {
                              ^
main.cpp:20:30: error: expected ')' before 'foo'
main.cpp:20:72: error: expected primary-expression before ')' token
   if ( (std::shared_ptr<Foo> foo{std::dynamic_pointer_cast<Foo>(bar)}) ) {
                                                                        ^
